--- a/Project_2_VQE_Molecules/environment/CDLWeek2.yml
+++ b/Project_2_VQE_Molecules/environment/CDLWeek2.yml
@@ -1,4 +1,4 @@
-name: week_2
+name: CDLWeek2
 channels:
   - anaconda
   - psi4
@@ -9,6 +9,7 @@ dependencies:
   - attrs=19.3.0=py_0
   - backcall=0.2.0=py_0
   - blas=1.0=mkl
+  - bleach=3.1.5=py_0
   - ca-certificates=2020.6.24=0
   - certifi=2020.6.20=py37_0
   - chemps2=1.8.9=h8c3debe_0
@@ -16,13 +17,15 @@ dependencies:
   - dbus=1.13.16=hb2f20db_0
   - decorator=4.4.2=py_0
   - deepdiff=3.3.0=py37_1
+  - defusedxml=0.6.0=py_0
   - dkh=1.2=h173d85e_2
+  - entrypoints=0.3=py37_0
   - expat=2.2.9=he6710b0_2
   - fontconfig=2.13.0=h9420a91_0
   - freetype=2.10.2=h5ab3b9f_0
   - gau2grid=1.3.1=h035aef0_0
   - gdma=2.2.6=h0e1e685_6
-  - glib=2.65.0=h3eb4bd4_0
+  - glib=2.63.1=h5a9c865_0
   - gst-plugins-base=1.14.0=hbbd80ab_1
   - gstreamer=1.14.0=hb31296c_0
   - hdf5=1.10.2=hba1933b_1
@@ -30,17 +33,23 @@ dependencies:
   - importlib-metadata=1.7.0=py37_0
   - importlib_metadata=1.7.0=0
   - intel-openmp=2020.1=217
+  - ipykernel=5.3.2=py37h5ca1d4c_0
   - ipython=7.16.1=py37h5ca1d4c_0
   - ipython_genutils=0.2.0=py37_0
+  - ipywidgets=7.5.1=py_0
   - jedi=0.17.1=py37_0
+  - jinja2=2.11.2=py_0
   - jpeg=9b=h024ee3a_2
   - jsonpickle=0.9.6=py37_0
-  - jupyter_client=6.1.5=py_0
+  - jsonschema=2.6.0=py37_0
+  - jupyter=1.0.0=py37_7
+  - jupyter_client=6.1.6=py_0
+  - jupyter_console=6.1.0=py_0
   - jupyter_core=4.6.3=py37_0
   - kiwisolver=1.2.0=py37hfd86e86_0
   - ld_impl_linux-64=2.33.1=h53a641e_7
   - libedit=3.1.20191231=h14c3975_1
-  - libffi=3.3=he6710b0_2
+  - libffi=3.2.1=hd88cf55_4
   - libgcc-ng=9.1.0=hdf63c60_0
   - libgfortran-ng=7.3.0=hdf63c60_0
   - libint=1.2.1=hb4a4fd4_6
@@ -51,19 +60,23 @@ dependencies:
   - libxc=4.3.4=h7b6447c_0
   - libxcb=1.14=h7b6447c_0
   - libxml2=2.9.10=he19cac6_1
+  - markupsafe=1.1.1=py37h14c3975_1
   - matplotlib=3.2.2=0
   - matplotlib-base=3.2.2=py37hef1b27d_0
+  - mistune=0.8.4=py37h14c3975_1001
   - mkl=2020.1=217
-  - mkl-service=2.3.0=py37he904b0f_0
-  - mkl_fft=1.1.0=py37h23d657b_0
+  - mkl_fft=1.0.12=py37ha843d7b_0
   - mkl_random=1.1.1=py37h0573a6f_0
   - more-itertools=8.4.0=py_0
+  - nbconvert=5.6.1=py37_1
+  - nbformat=5.0.7=py_0
   - ncurses=6.2=he6710b0_1
   - networkx=2.4=py_1
-  - numpy=1.18.5=py37ha1c710e_0
-  - numpy-base=1.18.5=py37hde5b4d6_0
+  - notebook=6.0.3=py37_0
   - openssl=1.1.1g=h7b6447c_0
   - packaging=20.4=py_0
+  - pandoc=2.10=0
+  - pandocfilters=1.4.2=py37_1
   - parso=0.7.0=py_0
   - pcmsolver=1.2.1=py37h142c950_0
   - pcre=8.44=he6710b0_0
@@ -72,103 +85,121 @@ dependencies:
   - pint=0.10=py_0
   - pip=20.1.1=py37_1
   - pluggy=0.13.1=py37_0
+  - prometheus_client=0.8.0=py_0
   - prompt-toolkit=3.0.5=py_0
+  - prompt_toolkit=3.0.5=0
   - psi4=1.3.2+ecbda83=py37h31b3128_0
+  - psutil=5.7.0=py37h7b6447c_0
+  - ptyprocess=0.6.0=py37_0
   - py=1.9.0=py_0
   - pydantic=1.3=py37h516909a_0
   - pygments=2.6.1=py_0
   - pyparsing=2.4.7=py_0
   - pyqt=5.9.2=py37h05f1152_2
   - pytest=5.4.3=py37_0
-  - python=3.7.7=hcff3b4d_5
+  - python=3.7.1=h0371630_7
   - python-dateutil=2.8.1=py_0
+  - pyzmq=19.0.1=py37he6710b0_1
   - qcelemental=0.4.2=py_0
   - qt=5.9.7=h5867ecd_1
-  - readline=8.0=h7b6447c_0
-  - setuptools=49.1.0=py37_0
+  - qtconsole=4.7.5=py_0
+  - qtpy=1.9.0=py_0
+  - readline=7.0=h7b6447c_5
+  - send2trash=1.5.0=py37_0
+  - setuptools=49.2.0=py37_0
   - simint=0.7=h642920c_1
   - sip=4.19.8=py37hf484d3e_0
   - six=1.15.0=py_0
   - sqlite=3.32.3=h62c20be_0
+  - terminado=0.8.3=py37_0
+  - testpath=0.4.4=py_0
   - tk=8.6.10=hbc83047_0
   - tornado=6.0.4=py37h7b6447c_1
   - traitlets=4.3.3=py37_0
   - wcwidth=0.2.5=py_0
+  - webencodings=0.5.1=py37_1
   - wheel=0.34.2=py37_0
+  - widgetsnbextension=3.5.1=py37_0
   - xz=5.2.5=h7b6447c_0
   - zeromq=4.3.2=he6710b0_2
   - zipp=3.1.0=py_0
   - zlib=1.2.11=h7b6447c_3
   - pip:
     - absl-py==0.9.0
-    - bleach==3.1.5
+    - appdirs==1.4.4
+    - astunparse==1.6.3
+    - autograd==1.3
+    - cachetools==4.1.1
     - cffi==1.14.0
     - cmake==3.17.3
     - cryptography==2.9.2
     - cython==0.29.21
-    - defusedxml==0.6.0
     - dill==0.3.2
     - dlx==1.0.4
     - docplex==2.14.186
-    - entrypoints==0.3
     - fastdtw==0.3.4
     - fastjsonschema==2.14.4
+    - future==0.18.2
+    - gast==0.3.3
+    - google-auth==1.19.1
+    - google-auth-oauthlib==0.4.1
+    - google-pasta==0.2.0
+    - grpcio==1.30.0
     - inflection==0.5.0
-    - ipykernel==5.3.2
-    - ipython-genutils==0.2.0
-    - ipywidgets==7.5.1
     - jax==0.1.72
     - jaxlib==0.1.51
-    - jinja2==2.11.2
     - joblib==0.16.0
-    - jsonschema==3.2.0
-    - jupyter==1.0.0
-    - jupyter-client==6.1.6
-    - jupyter-console==6.1.0
-    - markupsafe==1.1.1
+    - keras-preprocessing==1.1.2
+    - markdown==3.2.2
     - marshmallow==3.7.0
     - marshmallow-polyfield==5.9
-    - mistune==0.8.4
     - mpmath==1.1.0
-    - nbconvert==5.6.1
-    - nbformat==5.0.7
     - nest-asyncio==1.3.3
-    - notebook==6.0.3
     - ntlm-auth==1.5.0
+    - numpy==1.19.0
+    - oauthlib==3.1.0
+    - openfermionpsi4==0.4
     - opt-einsum==3.2.1
     - pandas==1.0.5
-    - pandocfilters==1.4.2
+    - pennylane==0.10.0
+    - pennylane-qchem==0.10.0
+    - pennylane-qiskit==0.9.0
     - ply==3.11
-    - prometheus-client==0.8.0
-    - psutil==5.7.0
-    - ptyprocess==0.6.0
+    - protobuf==3.12.2
+    - pyasn1==0.4.8
+    - pyasn1-modules==0.2.8
     - pybind11==2.5.0
     - pycparser==2.20
-    - pyrsistent==0.16.0
+    - pyscf==1.7.1
     - python-constraint==1.4.0
     - pytz==2020.1
-    - pyzmq==19.0.1
     - qiskit==0.19.6
     - qiskit-aer==0.5.2
     - qiskit-aqua==0.7.3
     - qiskit-ibmq-provider==0.7.2
     - qiskit-ignis==0.3.3
     - qiskit-terra==0.14.2
-    - qtconsole==4.7.5
-    - qtpy==1.9.0
     - quandl==3.5.1
     - qulacs==0.1.10.1
     - requests-ntlm==1.1.0
+    - requests-oauthlib==1.3.0
     - retworkx==0.3.4
+    - rsa==4.6
     - scikit-learn==0.23.1
-    - scipy==1.5.0
-    - send2trash==1.5.0
+    - scipy==1.4.1
+    - semantic-version==2.6.0
+    - sklearn==0.0
     - sympy==1.6.1
-    - terminado==0.8.3
-    - testpath==0.4.4
+    - tensorboard==2.2.2
+    - tensorboard-plugin-wit==1.7.0
+    - tensorflow==2.2.0
+    - tensorflow-estimator==2.2.0
+    - termcolor==1.1.0
     - threadpoolctl==2.1.0
-    - webencodings==0.5.1
+    - toml==0.10.1
+    - tqdm==4.48.0
     - websockets==7.0
-    - widgetsnbextension==3.5.1
-prefix: /home/asw-g-09/anaconda3/envs/week_2
+    - werkzeug==1.0.1
+    - wrapt==1.12.1
+prefix: /home/seek2fly/anaconda3/envs/CDLWeek2
 
