--- a/Project_3_Franck_Condon_Factors/Task2Code/makefile
+++ b/Project_3_Franck_Condon_Factors/Task2Code/makefile
@@ -1,14 +1,14 @@
 .SUFFIXES: .o .c .f .cxx
 # DEBUG option remove for efficiency
-CC=/usr/bin/g++
-cc=/usr/bin/gcc
-FC=/usr/bin/gfortran
+CC=g++
+cc=gcc
+FC=gfortran
 options= -DDUSHQUICK -DBLAS -DLINUX -O2 -Wno-deprecated
 objects=FC.o matvec.o prod.o
 dependencies=matvec.h 
 FC_fast : $(objects)
 	$(CC) -o FCF_calc $(objects)  \
--framework Accelerate -L/usr/lib/gcc/x86_64-linux-gnu/9/libgfortran.a -lgfortran
+-lblas -llapack -lgfortran
 $(objects): $(dependencies)
 .cxx.o:
 	$(CC) -c $(options) $<
